--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "just playing around with APIs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "staer":"node index.js"
   },
   "keywords": [
     "api",
